# pdf_utilities

./: LICENSE  README.md  libpdf_utility.py  pdf_utility.py  pyproject.toml  requirements-dev.txt
pdf_utility/: __init__.py  pdf_utility.py  types.py
src/: __init__.py  pdf_utility.py
tests/: test_pdf_utility.py
